--- a/package.json
+++ b/package.json
@@ -20,5 +20,20 @@
   "devDependencies": {
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0"
+  },
+  "dependencies": {
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "mongoose": "^8.0.3",
+    "morgan": "^1.10.0",
+    "winston": "^3.11.0",
+    "xss-clean": "^0.1.4"
   }
 }
