database model add

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 NODE_ENV=development
 PORT=4000
 DATABASE_URL=<database-url>
+CORS_ORIGIN=http://localhost:3000
+
+ACCESS_TOKEN_SECRET=<secret>
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=<secret>
+REFRESH_TOKEN_EXPIRY=30d
