--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prettier": "^3.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -31,7 +32,9 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.3",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
     "morgan": "^1.10.0",
     "winston": "^3.11.0",
     "xss-clean": "^0.1.4"
