User register implement with file upload

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ ACCESS_TOKEN_SECRET=<secret>
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=<secret>
 REFRESH_TOKEN_EXPIRY=30d
+
+CLOUDINARY_NAME=<cloudinary-name>
+CLOUDINARY_API_KEY=<cloudinary-api-key>
+CLOUDINARY_API_SECRET_KEY=<cloudinary-api-secret>
