--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -33,9 +34,14 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0",
+    "streamifier": "^0.1.1",
     "winston": "^3.11.0",
     "xss-clean": "^0.1.4"
   }
